options folder always slides down to match the fieldnotes to prevent the image cutting off from showing

--- a/src/styles/_objects.tabs.scss
+++ b/src/styles/_objects.tabs.scss
@@ -178,9 +178,10 @@
         }
         &.onTop {
             @include mq($from: tablet, $until: desktop) {
-
+                margin-top: -15px !important;
             }
             @include mq($from: desktop, $until: wide) {
+                margin-top: -15px !important;
             }
             @include mq($from: wide) {
                 margin-top: -15px !important;
